--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "react": "^15.2.0",
-    "react-dom": "^15.2.0",
-    "react-router": "^2.5.2"
+    "react-dom": "^15.2.0"
   },
   "devDependencies": {
     "source-map-loader": "^0.1.5",
