--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^15.2.0"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
     "source-map-loader": "^0.1.5",
     "ts-loader": "^0.8.2"
   }
